--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Split</title>
     <link rel="icon" type="image/x-icon" href="/split/images/divide.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../split/styles.css" charset="utf-8">
 </head>
 <body>
     <p class="title">Split</p>
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="text/javascript" src="../split/script.js" charset="utf-8"></script>
 </body>
 </html>
 
