--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Split</title>
-    <link rel="icon" type="image/x-icon" href="/split/images/divide.png">
+    <link rel="icon" type="image/x-icon" href="../split/images/divide.png">
     <link rel="stylesheet" type="text/css" href="../split/styles.css" charset="utf-8">
 </head>
 <body>
