--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Split</title>
-    <link rel="icon" type="image/x-icon" href="../split/images/divide.png">
-    <link rel="stylesheet" type="text/css" href="../split/styles.css" charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="../images/divide.png">
+    <link rel="stylesheet" type="text/css" href="styles.css" charset="utf-8">
 </head>
 <body>
     <p class="title">Split</p>
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="../split/script.js" charset="utf-8"></script>
+    <script type="text/javascript" src="script.js" charset="utf-8"></script>
 </body>
 </html>
 
